Fix npm demo script to use quick-start.js
- Update package.json demo script to run quick-start.js
- Add examples/package.json for dependencies
- Add multiple demo options (quick, full, individual tools)
- Ensure consistency between README and actual scripts

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "test:itoc": "cd itoc && npm test",
     "test:ctge": "cd ctge && npm test",
     "test:sets": "cd sets && npm test",
-    "demo": "npm run demo:mockoon && npm run demo:itoc",
-    "demo:mockoon": "cd examples && node test-with-mockoon.js",
+    "demo": "cd examples && npm install && node quick-start.js",
+    "demo:quick": "cd examples && node quick-start.js",
+    "demo:full": "npm run demo:itoc && npm run demo:ctge && npm run demo:sets",
     "demo:itoc": "cd itoc && npm run demo",
+    "demo:ctge": "cd ctge && npm run demo", 
+    "demo:sets": "cd sets && npm run demo",
     "start:mock": "cd mock-backend && ./start-mock-services.sh",
     "clean": "rm -rf node_modules */node_modules */dist */build"
   },
